# lunara

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  compose.yaml  config.toml  deny.toml  docker-compose.yaml  init.sql  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json  install.t  install_libs.sh
.github/: CODE_OF_CONDUCT.md  copilot-instructions.md
.github/workflows/: codeql.yml  docker-image.yml  docker-publish.yml  publish-ghcr.yml  rust-clippy.yml  rust.yml
.run/: Compose.run.xml  DockerFile.run.xml
flutter/: .flutter-plugins-dependencies  build.yaml  pubspec.yaml
flutter/.dart_tool/: package_config.json  package_graph.json
flutter/.dart_tool/flutter_build/: dart_plugin_registrant.dart
flutter/.dart_tool/flutter_build/b8d35bffef494fbe7aec403ed71f07d9/: dart_build.d  dart_build.stamp  dart_build_result.json  install_code_assets.d  install_code_assets.stamp  linux_engine_sources.d  unpack_linux.stamp
flutter/lib/: colours.dart  main.dart  ui_config.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
src/: config.rs  keyring_service.rs  main.rs
src/account/: account.rs  mod.rs
src/api/: mod.rs
src/api/auth/: login.rs  mod.rs  signup.rs
src/api/authentication/: login.rs  mod.rs  signup.rs
src/database/: db.rs  mod.rs
src/http/: mod.rs  plugin_fetch.rs  server_creator.rs
src/keyring/: keyring_service.rs  mod.rs
src/mc/: mod.rs  plugin.rs  server.rs
src/minecraft/: server.rs
src/route/: api_route.rs  auth_route.rs  mc_route.rs  mod.rs  route_error.rs  servers.rs
src/routes/: api_route.rs  auth_route.rs  mod.rs
static/assets/: index-hBkqJnZ3.css
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
web/src/: App.tsx  main.tsx
web/src/authentication/: LoginPage.tsx
web/src/authentication/styles/: login.scss
web/src/components/theme/: ThemeContext.tsx  ThemeToggle.tsx  mod.ts  theme.ts
web/src/dev/: previews.tsx  useInitial.ts
web/src/home/: HomePage.tsx
web/src/home/styles/: home.scss
web/src/pages/: home.tsx  login.tsx  plugin.tsx
web/src/plugins/: PluginPage.tsx
web/src/plugins/styles/: plugin.scss
web/src/styles/: plugin.scss  style.scss
