[package]
authors = ["seasnail1"]
repository = "https://github.com/user93390/Lunara"
license = "Apache-2.0"
version = "1.0.0"
name = "Lunara"
edition = "2021"
rust-version = "1.92.0"

[dependencies]
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
tokio-postgres = { version = "0.7.16", features = ["with-uuid-1"] }
axum = { version = "0.8.8", features = ["macros"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
keyring = { version = "3.6.0", features = ["linux-native", "tokio", "crypto-rust"] }
log = "0.4.29"
color-eyre = "0.6.5"
env_logger = "0.11.8"
once_cell = "1.21.3"
hex = "0.4.3"
rand = "0.9.2"
toml = "0.9.8"
serde = { version = "1.0.2", features = ["derive"] }