[package]
authors = ["seasnail1"]
repository = "https://github.com/user93390/Lunara"
license = "Apache-2.0"
version = "1.0.0"
name = "Lunara"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
keyring = { version = "3.6.0", features = ["linux-native", "tokio", "crypto-rust"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.2", features = ["derive"] }

uuid = { version = "1.20.0", features = ["v4", "serde"] }
log = "0.4.29"
env_logger = "0.11.8"
hex = "0.4.3"
rand = "0.9.2"
toml = "0.9.8"
reqwest = "0.13.1"
