[package]
authors = ["seasnail1"]
repository = "https://github.com/user93390/Lunara"
license = "Apache-2.0"
version = "1.0.0"
name = "Lunara"
edition = "2024"
rust-version = "1.92.0"
description = "A modern way of making containerized, fully local Minecraft servers."
keywords = ["Docker", "Minecraft", "Containerized", "Self-hosted"]

[dependencies]
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
keyring = { version = "3.6.0", features = ["linux-native", "tokio", "crypto-rust"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "process"] }
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.2", features = ["derive"] }

uuid = { version = "1.19.0", features = ["v4", "serde"] }
log = "0.4.29"
env_logger = "0.11.8"
hex = "0.4.3"
rand = "0.10.0"
toml = "1.0.1+spec-1.1.0"

tower-http = { version = "0.6.8", features = ["cors", "fs"] }
base64 = "0.22.1"
reqwest = { version = "0.13.1", features = ["json"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
axum-cookie = "0.2.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[dev-dependencies]
tower = "0.5.3"
